# wireguard_bot

./: .gitignore  README.md  bot.py  main.py  pyproject.toml  requirements.txt  show_info.py
libs/core/: __init__.py  config.py  logger.py  system_metrics.py
libs/telegram/: __init__.py  commands.py  database.py  keyboards.py  messages.py  server_monitor.py  types.py  utils.py  wrappers.py
libs/telegram/commands/: __init__.py  add.py  ban.py  base.py  bind.py  block_torrent.py  cancel.py  com.py  commands.py  get_config.py  get_stats_all.py  get_stats_export.py  get_stats_user.py  get_tg_username.py  get_tg_users.py  get_tid.py  get_torrent_rules.py  get_torrent_state.py  get_users_by_tid.py  help.py  menu.py  reload_wg.py  rem.py  rem_tg_user.py  req_new_config.py  send_config.py  send_message.py  server_status.py  show_all_bindings.py  show_users_state.py  speedtest.py  start.py  unban.py  unbind.py  unbind_tid.py  unblock_torrent.py  unknown.py  vnstat_summary.py
libs/telegram/keyboards/: __init__.py  keyboards.py  keys.py  menu_keyboard.py
libs/wireguard/: __init__.py  config.py  stats.py  types.py  user_control.py  utils.py  wg_db.py
stuff/: base_config.json
