[project]
name = "wireguard-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.20.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "apscheduler==3.11.0",
    "certifi==2024.8.30",
    "exceptiongroup==1.2.2",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "python-telegram-bot==21.6",
    "sniffio==1.3.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "tzlocal==5.2",
]